# wormhole-world-id-fuzzing

./: README.md  Trident.toml
.github/workflows/: test.yaml
programs/solana-world-id-onchain-template/: Cargo.toml
programs/solana-world-id-onchain-template/src/instructions/: verify_and_execute.rs
programs/solana-world-id-program/: Cargo.toml
programs/solana-world-id-program/src/instructions/: clean_up_root.rs  close_signatures.rs  post_signatures.rs  update_root_with_query.rs  verify_groth16_proof.rs
trident-tests/fuzz_tests/: Cargo.toml
trident-tests/fuzz_tests/fuzz_0/: constants.rs  fuzz_instructions.rs  test_fuzz.rs
trident-tests/fuzz_tests/fuzz_0/instructions/: verify_groth16_proof.rs
trident-tests/fuzz_tests/fuzz_1/: test_fuzz.rs
trident-tests/fuzz_tests/fuzz_2/: constants.rs  test_fuzz.rs
trident-tests/fuzz_tests/fuzz_3/: constants.rs  fuzz_instructions.rs  test_fuzz.rs
trident-tests/fuzz_tests/fuzz_3/instructions/: clean_up_root.rs
trident-tests/fuzz_tests/fuzz_4/: constants.rs  test_fuzz.rs
trident-tests/fuzz_tests/fuzz_5/: constants.rs  fuzz_instructions.rs  test_fuzz.rs
trident-tests/fuzz_tests/fuzz_5/instructions/: verify.rs
trident-tests/fuzz_tests/fuzz_6/: constants.rs  test_fuzz.rs
trident-tests/fuzz_tests/fuzz_6/instructions/: verify_n_execute.rs
trident-tests/fuzz_tests/fuzz_7/: constants.rs  fuzz_instructions.rs
trident-tests/fuzz_tests/fuzz_7/instructions/: verify_n_execute.rs
trident-tests/fuzz_tests/fuzz_8/: constants.rs  fuzz_instructions.rs
trident-tests/fuzz_tests/fuzz_8/instructions/: verify_n_execute.rs
