[package]
name = "solana-world-id-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_world_id_program"

[features]
default = ["mainnet"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
mainnet = ["wormhole-solana-consts/mainnet"]
testnet = ["wormhole-solana-consts/testnet"]
idl-build = ["anchor-lang/idl-build"]
trident-fuzzing = ["dep:trident-fuzz"]

[dependencies]
cfg-if = "1.0"
groth16-solana = "0.0.3"

[dependencies.trident-derive-accounts-snapshots]
version = "0.0.2"

[dependencies.trident-fuzz]
version = "0.2.0"
optional = true

[dependencies.anchor-lang]
version = "0.30.1"
features = ["init-if-needed"]

[dependencies.wormhole-raw-vaas]
version = "0.3.0-alpha.1"

[dependencies.wormhole-solana-consts]
version = "0.3.0-alpha.1"

[dependencies.wormhole-solana-utils]
version = "0.3.0-alpha.1"

[dependencies.wormhole-query-sdk]
git = "https://github.com/wormholelabs-xyz/wormhole-query-sdk-rust"
version = "0.0.1"
rev = "0f34cb470f4e3137b53aa91adcbb0c7def280925"
